# sentencepiece-model

./: .gitattributes  .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml
src/: lib.rs  sentencepiece.proto  sentencepiece_model.proto
tests/: test.rs
